feat: support metadata-driven OpenAPI schema names
